make all registration deferred